gcc/testsuite/g++.dg/cpp0x/decltype-77338.C
// PR c++/77338
// { dg-do compile { target c++11 } }

struct S;

template <typename>
auto f (S s) -> decltype (s (s));	// { dg-error "no match for call to" }
